# hanamikoji-ai

./: README.md  pyproject.toml
hanamokoji-ai/: train.py
hanamokoji-ai/env/: dummy_env.py
