[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hanamikoji-ai"
version = "1.0.0"
authors = [
  { name="Dmitrii Fomin", email="fomin.dm@gmail.com" },
]
description = "A package to train AI agent to play board game Hanamikoji"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dfomin/hanamikoji-ai"
"Bug Tracker" = "https://github.com/dfomin/hanamikoji-ai/issues"